<resources>
    <string name="app_name">APPello</string>
    <string name="doc_name">Docente:</string>
    <string name="sel_name">Selezionare sezione:</string>
    <string name="sei_name">6</string>
    <string name="a_name">A</string>
    <string name="b_name">B</string>
    <string name="c_name">C</string>
    <string name="d_name">D</string>
    <string name="e_name">E</string>
    <string name="f_name">F</string>
    <string name="t1_name">T1</string>
    <string name="t2_name">T2</string>
    <string name="h_name">H</string>
    <string name="j_name">J</string>
    <string name="k_name">K</string>
    <string name="l_name">L</string>
    <string name="g_name">G</string>
    <string name="salve_name">Salve </string>
    <string name="selind_name"> Selezionare indirizzo:</string>
    <string name="diV_name"> DI \nVITTORIO</string>
    <string name="lat_name"> LATTANZIO </string>
    <string name="liceo_name"> LICEO SCIENTIFICO SCIENZE APPLICATE </string>
    <string name="prima_name"> 1° </string>
    <string name="seconda_name"> 2° </string>
    <string name="terza_name"> 3° </string>
    <string name="quarta_name"> 4° </string>
    <string name="quinta_name"> 5° </string>
    <string name="login_name"> APPello\nlogin </string>
    <string name="spazio_name">       </string>
    <string name="ind_name">Indirizzo email</string>
    <string name="inspwd_name">Inserisca la password</string>
    <string name="dimenticatapwd_name">Password dimenticata?</string>
    <string name="LogIn1_name"> Log in</string>
    <string name="nuovostud_name">Sei un nuovo utente?</string>
    <string name="mostra_name">Mostra</string>
    <string name="registrati">Registrati</string>
    <string name="torna_a">Torna a</string>
    <string name="conferma_password">Conferma password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="appello_nregistrazione">APPello\nregistrazione</string>
    <string name="m_name">M</string>
    <string name="n_name">N</string>
    <string name="USERDATA">./app/src/USERDATA.txt</string>

</resources>