<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Classi">
    <include layout="@layout/barra" />

    <TextView
        android:id='@+id/Docente1'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:rotationX="-350"
        android:text="@string/doc_name"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id='@+id/nomeDocente'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@id/Docente1"
        android:rotationX="-350"
        android:text=""
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id='@+id/selezione1'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Docente1"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/sel_name"
        android:textColor="#000000"
        android:textSize="18sp" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button1o"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/custom_button"
        android:text="@string/prima_name"
        android:textColor="#FFFFFF" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button2o"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="180dp"
        android:layout_toEndOf="@+id/button1o"
        android:background="@drawable/custom_button"
        android:text="@string/seconda_name"
        android:textColor="#FFF" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button3o"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/button1o"
        android:layout_marginTop="33dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/custom_button"
        android:text="@string/terza_name"
        android:textColor="#FFF" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button4o"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="33dp"
        android:layout_below="@id/button2o"
        android:layout_toEndOf="@id/button3o"
        android:background="@drawable/custom_button"
        android:text="@string/quarta_name"
        android:textColor="#FFF" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button5o"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/button3o"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/custom_button"
        android:text="@string/quinta_name"
        android:textColor="#FFFFFF" />

</RelativeLayout>