<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/barra" />

    <TextView
        android:id='@+id/Salve'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:rotationX="-350"
        android:text="@string/salve_name"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id='@+id/Docente'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_toEndOf="@id/Salve"
        android:rotationX="-350"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id='@+id/selezione1'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Salve"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/selind_name"
        android:textColor="#000000"
        android:textSize="18sp" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/custom_button"
        android:text="@string/diV_name"
        android:textColor="#FFFFFF" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="180dp"
        android:layout_toEndOf="@+id/button1"
        android:background="@drawable/custom_button"
        android:text="@string/lat_name"
        android:textColor="#FFFFFF" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/custom_button"
        android:text="@string/liceo_name"
        android:textColor="#FFFFFF" />
</RelativeLayout>