<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/barra" />

    <TextView
        android:id='@+id/Docente1_1'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:rotationX="-350"
        android:text="@string/doc_name"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id='@+id/nomeDocente_1'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@id/Docente1_1"
        android:rotationX="-350"
        android:text=""
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id='@+id/selezione1_1'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Docente1_1"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/sel_name"
        android:textColor="#000000"
        android:textSize="18sp" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button_a"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:text="@string/a_name"
        android:textSize="50sp"
        android:textColor="#FFFFFF" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/button_b"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="33dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_a"
        android:background="@drawable/custom_button"
        android:text="@string/b_name"
        android:textSize="50sp"
        android:textColor="#FFFFFF" />


</RelativeLayout>